# fastapi-metrics-gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_refresh_tokens.py
scripts/: worker_healthcheck.py
src/: config.py  database.py  limiter.py  main.py  metrics.py  observability.py
src/analytics/: repositories.py  router.py  schemas.py  service.py
src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
src/events/: models.py  router.py  schemas.py  service.py
src/worker/: __main__.py  config.py  consumer.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_health.py  test_main.py
tests/analytics/: test_analytics.py
tests/auth/: test_auth.py
tests/e2e/: conftest.py  test_full_flow.py
tests/events/: test_events.py
tests/unit/: conftest.py  test_auth_unit.py  test_events_unit.py  test_health_unit.py
tests/worker/: test_consumer.py
